Update narrative in the index.html

--- a/index.html
+++ b/index.html
@@ -27,18 +27,17 @@
     <div class="row">
       <div class="col-xs-12  col-md-12">
         <div class="article">
-          <h2>Correlations Discovered Between Health Risks and Age, Income</h2>
-          <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor
-            quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean
-            ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+          <h2>Correlations Discovered Between Health Risks and Poverty Rates</h2>
+          <p>The graph above shows the correlations between health risks or lack of healthcare coverage and poverty rates for all the states in the US. 
+            We can see that in general terms there is a linear correlation between these two factors since the states with the highest poverty rates also have the greatest percentages of non-healthcare coverage.
+          </p>
 
-          <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor
-            quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean
-            ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+          <p>For instace, take a look at Louisiana, New Mexico, and Mississip on the far right of the graph plus Texas which is an outlier and the state with less health coverage. 
+            It is worth to mention that these states also have a below-average income (<$54,454), while the states situated at the far left of the graph such as New Hampshire, Maryland, and Connecticut show income levels above $60,000.</p>
 
-          <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor
-            quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean
-            ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+          <p>Finally, by hovering on the bubbles we can compare other variables such as Obesity and Smoke Rates. Again, states with the highest poverty rates and the least healthcare coverage show Obesity and Smoke Rates above the mean (29% and 18%, respectively) as compared to the states with better healthcare and poverty conditions.
+            This helps us infer that availability of healthcare services for the population can of course help diminish several problems by treating them in a timely manner.
+          </p>
         </div>
       </div>
     </div>
